--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.8.1",
     "monaco-editor": "^0.45.0",
-    "@monaco-editor/react": "^4.6.0"
+    "@monaco-editor/react": "^4.6.0",
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
